[package]
name = "physics_library_testing_ground"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15"
rs_physics = { git = "https://github.com/bloodfeast/rs_physics", features = ["all"], branch = "feature-add-cosmological-particle-sim" }
rand = "0.9.0"
rayon = "1.10.0"
bumpalo = "3.17.0"
